test-services/k8s/java-service/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-service
  namespace: dephealth-test
  labels:
    app: java-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-service
  template:
    metadata:
      labels:
        app: java-service
    spec:
      containers:
        - name: java-service
          image: harbor.kryukov.lan/library/dephealth-test-java:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
